Bug 1036264 - Always pass true for ignoreRootScrollFrame. r=kats, a=1.4+